[package]
name = "db1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
zstd = "*"
rand = "*"
rand_chacha = "0.3.1"
pretty-hex = "*"
base64 = "*"

[profile.release]
debug = false
opt-level = 3

[lib]
path="src/c_lib.rs"
name = "db2"
crate-type = ["cdylib"]

[workspace]

