[package]
name = "db1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = {version = "*", default-features = false}
rand = {version = "*", features = ["std", "std_rng"]}
rand_chacha = "0.3.1"

[dev-dependencies]

[profile.release]
debug = false
opt-level = 3

[profile.bench]
opt-level = 3
lto = true
debug = 1

[lib]
path="src/c_lib.rs"
name = "db2"
crate-type = ["cdylib"]

[workspace]

